--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+.main {
+  background-color: black;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.content {
+  background-color: white;
+  padding: 5%;
+  width: 300px;
+  height: auto;
+  margin: auto;
+  text-align: center;
+}
+.bottom {
+  background-color: black;
+  color: white;
+  margin: 0;
+  margin-top: 10px;
+  padding: 10px;
+  text-align: center;
 }
