--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,6 +24,8 @@ body {
 	text-align: center;
 	overflow: auto;
 	box-shadow: 0 0px 7.8px rgba(0, 0, 0, 0.211), 0 0px 17.2px rgba(0, 0, 0, 0.31), 0 0px 28.8px rgba(0, 0, 0, 0.383), 0 0px 43.4px rgba(0, 0, 0, 0.444), 0 0px 62.6px rgba(0, 0, 0, 0.5), 0 0px 88.6px rgba(0, 0, 0, 0.556), 0 0px 125.7px rgba(0, 0, 0, 0.617), 0 0px 182.5px rgba(0, 0, 0, 0.69), 0 0px 281.3px rgba(0, 0, 0, 0.789), 0 0px 500px rgba(0, 0, 0, 1);
+	border-left: 2px solid black;
+	border-right: 2px solid black;
 }
 h1 {
 	font-size: 60px;
@@ -86,6 +88,23 @@ button {
 	background: transparent;
 	transition: border-color 0.2s;
 }
+
+button:hover{
+	background: black;
+	color: white;
+	box-shadow:
+  	0 1.6px 2.5px rgba(0, 0, 0, 0.211),
+  	0 3.4px 5.5px rgba(0, 0, 0, 0.31),
+  	0 5.8px 9.2px rgba(0, 0, 0, 0.383),
+  	0 8.7px 13.9px rgba(0, 0, 0, 0.444),
+  	0 12.5px 20px rgba(0, 0, 0, 0.5),
+  	0 17.7px 28.4px rgba(0, 0, 0, 0.556),
+ 	0 25.1px 40.2px rgba(0, 0, 0, 0.617),
+ 	0 36.5px 58.4px rgba(0, 0, 0, 0.69),
+  	0 56.3px 90px rgba(0, 0, 0, 0.789),
+ 	0 100px 160px rgba(0, 0, 0, 1);
+	border: 2px solid white;
+  }
 .asunnot {
 	border-bottom: 2px solid black;
 }
