--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,8 +24,6 @@ body {
 	text-align: center;
 	overflow: auto;
 	box-shadow: 0 0px 7.8px rgba(0, 0, 0, 0.211), 0 0px 17.2px rgba(0, 0, 0, 0.31), 0 0px 28.8px rgba(0, 0, 0, 0.383), 0 0px 43.4px rgba(0, 0, 0, 0.444), 0 0px 62.6px rgba(0, 0, 0, 0.5), 0 0px 88.6px rgba(0, 0, 0, 0.556), 0 0px 125.7px rgba(0, 0, 0, 0.617), 0 0px 182.5px rgba(0, 0, 0, 0.69), 0 0px 281.3px rgba(0, 0, 0, 0.789), 0 0px 500px rgba(0, 0, 0, 1);
-	border-left: 2px solid black;
-	border-right: 2px solid black;
 }
 h1 {
 	font-size: 60px;
@@ -112,4 +110,31 @@ button:hover{
 .huone {
 	margin: 0px;
 	padding: 0px;
+}
+
+@media screen and (max-width: 1080px) {
+	.content {
+		width: 90vw;
+	}
+	h1 {
+		font-size: 10vw;
+	}
+	h2 {
+		font-size: 5vw;
+	}
+	p {
+		font-size: 3vw;
+	}
+	input {
+		width: 50vw;
+		font-size: 3vw;
+	}
+	select {
+		width: 50vw;
+		font-size: 3vw;
+	}
+	button {
+		width: 50vw;
+		font-size: 3vw;
+	}
 }
