--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,17 +4,21 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
 .main {
 	background-image: url("background.jpg");
-	background-color: grey;
-	background-position: center;
 	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: 100%;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-position: center;
 	height: 100vh;
 	margin: 0;
 	padding: 0;
+	top: 0px;
 }
+
 .content {
 	background-color: rgb(22, 158, 182, 0.75);
 	padding: 0%;
@@ -25,6 +29,7 @@ body {
 	overflow: auto;
 	box-shadow: 0 0px 7.8px rgba(0, 0, 0, 0.211), 0 0px 17.2px rgba(0, 0, 0, 0.31), 0 0px 28.8px rgba(0, 0, 0, 0.383), 0 0px 43.4px rgba(0, 0, 0, 0.444), 0 0px 62.6px rgba(0, 0, 0, 0.5), 0 0px 88.6px rgba(0, 0, 0, 0.556), 0 0px 125.7px rgba(0, 0, 0, 0.617), 0 0px 182.5px rgba(0, 0, 0, 0.69), 0 0px 281.3px rgba(0, 0, 0, 0.789), 0 0px 500px rgba(0, 0, 0, 1);
 }
+
 h1 {
 	font-size: 60px;
 	padding: 0px;
@@ -32,27 +37,32 @@ h1 {
 	margin: 0px;
 	font-family: 'JetBrains Mono', monospace;
 }
+
 h2 {
 	padding: 0px;
 	margin-top: 20px;
 	font-family: 'JetBrains Mono', monospace;
 }
+
 h3 {
 	padding: 0px;
 	margin-top: 20px;
 	font-family: 'JetBrains Mono', monospace;
 }
+
 label {
 	padding-top: 0px;
 	margin: 0px;
 	font-family: 'JetBrains Mono', monospace;
 }
+
 p {
 	padding: 0px;
 	margin-top: 20px;
 	margin-bottom: 5px;
 	font-family: 'JetBrains Mono', monospace;
 }
+
 input {
 	width: 250px;
 	font-family: 'JetBrains Mono', monospace;
@@ -62,6 +72,7 @@ input {
 	background: transparent;
 	transition: border-color 0.2s;
 }
+
 select {
 	width: 250px;
 	text-align: center;
@@ -75,6 +86,7 @@ select {
 	text-indent: 0.01px;
 	text-overflow: '';
 }
+
 button {
 	text-align: center;
 	margin: 20px;
@@ -87,25 +99,17 @@ button {
 	transition: border-color 0.2s;
 }
 
-button:hover{
+button:hover {
 	background: black;
 	color: white;
-	box-shadow:
-  	0 1.6px 2.5px rgba(0, 0, 0, 0.211),
-  	0 3.4px 5.5px rgba(0, 0, 0, 0.31),
-  	0 5.8px 9.2px rgba(0, 0, 0, 0.383),
-  	0 8.7px 13.9px rgba(0, 0, 0, 0.444),
-  	0 12.5px 20px rgba(0, 0, 0, 0.5),
-  	0 17.7px 28.4px rgba(0, 0, 0, 0.556),
- 	0 25.1px 40.2px rgba(0, 0, 0, 0.617),
- 	0 36.5px 58.4px rgba(0, 0, 0, 0.69),
-  	0 56.3px 90px rgba(0, 0, 0, 0.789),
- 	0 100px 160px rgba(0, 0, 0, 1);
+	box-shadow: 0 1.6px 2.5px rgba(0, 0, 0, 0.211), 0 3.4px 5.5px rgba(0, 0, 0, 0.31), 0 5.8px 9.2px rgba(0, 0, 0, 0.383), 0 8.7px 13.9px rgba(0, 0, 0, 0.444), 0 12.5px 20px rgba(0, 0, 0, 0.5), 0 17.7px 28.4px rgba(0, 0, 0, 0.556), 0 25.1px 40.2px rgba(0, 0, 0, 0.617), 0 36.5px 58.4px rgba(0, 0, 0, 0.69), 0 56.3px 90px rgba(0, 0, 0, 0.789), 0 100px 160px rgba(0, 0, 0, 1);
 	border: 2px solid white;
-  }
+}
+
 .asunnot {
 	border-bottom: 2px solid black;
 }
+
 .asunnot,
 .huone {
 	margin: 0px;
@@ -114,7 +118,10 @@ button:hover{
 
 @media screen and (max-width: 1080px) {
 	.content {
-		width: 90vw;
+		width: 100vw;
+		-webkit-box-shadow: inset 0px 0px 100px 10px rgba(0, 0, 0, 1);
+		-moz-box-shadow: inset 0px 0px 100px 10px rgba(0, 0, 0, 1);
+		box-shadow: inset 0px 0px 100px 10px rgba(0, 0, 0, 1);
 	}
 	h1 {
 		font-size: 10vw;
